<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jihon.cst2335_final_project.MovieFragment"
    >


    <TextView
        android:id="@+id/movie_detail_title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/movie_detail_title_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_title_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_actor_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_actor_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_actor_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_actor_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_length_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_actor_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_length_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_length_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_description_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_description_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/movie_detail_description_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/movie_detail_rating_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_description_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_rating_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_rating_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />
    <TextView
        android:id="@+id/movie_detail_genre_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_genre_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_genre_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_url_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_url_header"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_viewPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_value"
        android:layout_marginTop="2dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentEnd="true"
        android:text="@string/movie_detail_viewPoster"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_url_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_url_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <Button
        android:id="@+id/movie_detail_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_detail_url_value"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/movie_detail_cancel_button" />

    <Button
        android:id="@+id/movie_detail_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_detail_url_value"
        android:layout_toRightOf="@+id/movie_detail_cancel_button"
        android:layout_marginRight="12dp"
        android:text="@string/movie_detail_delete_button" />

    <Button
        android:id="@+id/movie_detail_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/movie_detail_delete_button"
        android:layout_toRightOf="@+id/movie_detail_delete_button"
        android:text="@string/movie_detail_save_button" />



</RelativeLayout>
