<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/movie_maxRating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/movie_maxRating_label" />

    <TextView
        android:id="@+id/movie_maxRating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:layout_toEndOf="@+id/movie_maxRating_label"
        android:text="xx" />

    <TextView
        android:id="@+id/movie_minRating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_maxRating_label"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/movie_minRating_label" />

    <TextView
        android:id="@+id/movie_minRating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_maxRating_value"
        android:layout_toEndOf="@+id/movie_minRating_label"
        android:layout_marginStart="39dp"
        android:layout_marginTop="36dp"
        android:text="xx" />

    <TextView
        android:id="@+id/movie_avgRating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_minRating_label"
        android:layout_marginTop="36dp"
        android:layout_marginStart="12dp"
        android:text="@string/movie_avgRating_label" />

    <TextView
        android:id="@+id/movie_avgRating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_minRating_value"
        android:layout_toEndOf="@+id/movie_avgRating_label"
        android:layout_marginStart="34dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="26dp"
        android:text="xx" />

</RelativeLayout>