<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jihon.cst2335_final_project.MovieImport"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    <TextView
        android:id="@+id/movie_detail_title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/movie_detail_title_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_title_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_actor_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_actor_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_actor_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_actor_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_length_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_actor_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_length_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_length_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_description_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_description_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_description_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_rating_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_description_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_rating_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_rating_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />
    <TextView
        android:id="@+id/movie_detail_genre_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_genre_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_genre_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_url_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_value"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_url_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_url_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_url_header"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    <TextView
        android:id="@+id/movie_detail_title_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/movie_detail_title_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_title_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_actor_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_title_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_actor_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_actor_value2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_actor_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_length_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_actor_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_length_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_length_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_description_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_length_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_description_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_description_value2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_description_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_rating_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_description_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_rating_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_rating_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />
    <TextView
        android:id="@+id/movie_detail_genre_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_rating_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_genre_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_genre_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/movie_detail_url_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_genre_value2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/movie_detail_url_header"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/movie_detail_url_value2"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="40dp"
        android:layout_below="@+id/movie_detail_url_header2"
        android:layout_marginLeft="12dp"
        android:textSize="12dp" />


    </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/movie_detail_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/movie_detail_cancel_button" />

    <Button
        android:id="@+id/movie_detail_download_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/movie_download_button" />
    <ProgressBar
        android:id="@+id/movie_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

</LinearLayout>
